--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-ui": "^2.13.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.4"
   },
