--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-ui": "^2.13.2",
+    "path-browserify": "^1.0.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.4"
   },
