--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.8.3",
     "element-ui": "^2.13.2",
     "path-browserify": "^1.0.1",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.4"
+    "vue-router": "^3.5.4",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
