--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.8.3",
     "element-ui": "^2.13.2",
+    "js-cookie": "^3.0.1",
     "path-browserify": "^1.0.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.4",
